updating pakage deps and fix for edge case were masonry gallery images were being cut off if viewport was smaller than the width of the image.

--- a/src/blocks/gallery/style.scss
+++ b/src/blocks/gallery/style.scss
@@ -54,6 +54,21 @@ figure.photopress-gallery {
 	
 }
 
+.photopress-gallery-masonry {
+	
+	.photopress-gallery-item {
+		
+		.photopress-gallery-item__figure {
+		
+			img {
+				
+				max-width: calc(100vw - ( var(--pp-gallery-gutter) *2 ) );
+				display:inline-block;
+			}
+		}
+	}
+}
+
 .photopress-gallery-mosaic {
 	
 	.photopress-gallery-item {
